SERVER-47671 Check DatabaseShardingState for index build commit under an exception handler

(cherry picked from commit 8cb73850ec6b902c0d8fc1c5c0592ddabbdbfc67)